syntax = "proto3";

package datapace;

import "google/protobuf/empty.proto";
import "common.proto";

service AuthService {
    rpc Identify(Token) returns (ID) {}
    rpc Email(Token) returns (UserEmail) {}
    rpc Exists(ID) returns (google.protobuf.Empty) {}
}

message Token {
    string value = 1;
}

message UserEmail {
    string email = 1;
    string contactEmail = 2;
}
