syntax = "proto3";

package datapace;
option go_package = "github.com/datapace/datapace/proto/streams";

import "proto/common.proto";

service StreamsService {
    rpc One(ID) returns (Stream) {}
}

message Stream {
    string id = 1;
    string name = 2;
    string owner = 3;
    string url = 4;
    uint64 price = 5;
    bool external = 6;
    string project = 7;
    string dataset = 8;
    string table = 9;
    string fields = 10;
    string visibility = 11;
    string accessType = 12;
}
